--- a/index.html
+++ b/index.html
@@ -197,5 +197,21 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="foooter__contenedor">
+        <div class="footer__grid">
+          <div class="footer__logo">
+            <img src="img/logo-blanco.svg" alt="Logo blanco nucleus" />
+          </div>
+          <nav class="navegacion">
+            <a href="#" class="navegacion__link">¿Qué es?</a>
+            <a href="#" class="navegacion__link">¿Cómo funciona?</a>
+            <a href="#" class="navegacion__link">Precios</a>
+            <a href="#" class="navegacion__link">Contratar</a>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
