--- a/index.html
+++ b/index.html
@@ -205,10 +205,18 @@
             <img src="img/logo-blanco.svg" alt="Logo blanco nucleus" />
           </div>
           <nav class="navegacion">
-            <a href="#" class="navegacion__link">¿Qué es?</a>
-            <a href="#" class="navegacion__link">¿Cómo funciona?</a>
-            <a href="#" class="navegacion__link">Precios</a>
-            <a href="#" class="navegacion__link">Contratar</a>
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿Qué es?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿Cómo funciona?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >Precios</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >Contratar</a
+            >
           </nav>
         </div>
       </div>
